@@ -274,28 +274,6 @@ gimp_new_rect_select_tool_button_release (GimpTool        *tool,
                          _("Click or press enter to create the selection."));
 
   gimp_rectangle_tool_button_release (tool, coords, time, state, display);
-
-/*   /\* if a rectangle still exists, "execute" the tool now *\/ */
-/*   if (tool->display) */
-/*     { */
-/*       gint                   x1, y1, x2, y2; */
-/*       GimpNewRectSelectTool *rect_select     = GIMP_NEW_RECT_SELECT_TOOL (tool); */
-
-/*       g_object_get (GIMP_RECTANGLE_TOOL (tool), */
-/*                     "x1", &x1, */
-/*                     "y1", &y1, */
-/*                     "x2", &x2, */
-/*                     "y2", &y2, */
-/*                     NULL); */
-
-/*       gimp_rectangle_tool_execute (GIMP_RECTANGLE_TOOL (tool), */
-/*                                    x1, y1, */
-/*                                    x2 - x1, */
-/*                                    y2 - y1); */
-
-/*       /\* save the undo that we got when executing *\/ */
-/*       rect_select->undo = gimp_undo_stack_peek (display->image->undo_stack); */
-/*     } */
 }
 
 static void
